--- a/website/content/docs/platform/k8s/helm/examples/development.mdx
+++ b/website/content/docs/platform/k8s/helm/examples/development.mdx
@@ -21,5 +21,5 @@ server:
 ## Learn
 
 Refer to the [Injecting Secrets into Kubernetes Pods via Vault Helm
-Sidecar](https://learn.hashicorp.com/vault/getting-started-k8s/sidecar) guide
-for a step-by-step tutorial.
+Sidecar](https://learn.hashicorp.com/vault/getting-started-k8s/sidecar) tutorial
+to learn how to set up Vault and the Vault Agent Injector service with the Vault Helm chart.
