changed learn to tutorial

--- a/website/content/docs/platform/k8s/helm/examples/development.mdx
+++ b/website/content/docs/platform/k8s/helm/examples/development.mdx
@@ -18,7 +18,7 @@ server:
     enabled: true
 ```
 
-## Learn
+## Tutorial
 
 Refer to the [Injecting Secrets into Kubernetes Pods via Vault Helm
 Sidecar](https://learn.hashicorp.com/vault/getting-started-k8s/sidecar) tutorial
