--- a/website/content/docs/plugins/plugin-portal.mdx
+++ b/website/content/docs/plugins/plugin-portal.mdx
@@ -10,7 +10,7 @@ This page contains a curated collection of official, partner, and community
 [Vault plugins](/docs/plugins).
 
 For more information about plugin development, refer to this [documentation
-section](/docs/plugins/plugin-development) and this [Tutorial](https://learn.hashicorp.com/vault/developer/plugin-backends).
+section](/docs/plugins/plugin-development).  In addition, the [Custom Secrets Engines](https://learn.hashicorp.com/collections/vault/custom-secrets-engine) tutorial series demonstrates the plugin development workflow in more detail.
 
 ## Official
 
