Vault documentation: changing references from learn to tutorial (#14844)
* changed learn to tutorial references

* changed learn to tutorial

* Update website/content/docs/plugins/plugin-portal.mdx

Co-authored-by: Yoko Hyakuna <yoko@hashicorp.com>

* Update website/content/docs/platform/aws/run.mdx

Co-authored-by: Yoko Hyakuna <yoko@hashicorp.com>

Co-authored-by: Yoko Hyakuna <yoko@hashicorp.com>

--- a/website/content/docs/platform/aws/run.mdx
+++ b/website/content/docs/platform/aws/run.mdx
@@ -30,7 +30,7 @@ To upgrade a Vault instance launched from an official AWS Marketplace AMI, pleas
 
 HashiCorp’s AWS Marketplace offerings provide an easy way to deploy Vault in a single-instance configuration using the [Filesystem storage backend](/docs/configuration/storage/filesystem), but for production use, we recommend running Vault on AWS with the same [general architecture](/docs/internals/architecture) as running it anywhere else. While the Filesystem storage backend is officially supported by HashiCorp, it does not support High Availability. Because Vault data is stored on disk in this configuration, it is subject to the durability and availability of Amazon Elastic Block Store (EBS) and should be backed up accordingly.
 
-For additional guidance on best practices for running Vault in production, please refer to the [production hardening guide](https://learn.hashicorp.com/vault/day-one/production-hardening).
+For additional guidance on best practices for running Vault in production, please refer to the [Production Hardening](https://learn.hashicorp.com/vault/day-one/production-hardening) tutorial.
 
 # Getting Support
 
