backport of commit ef5fe0902070005bde6b6eb2ac1d7cffb045bcbf

--- a/website/content/docs/configuration/seal/awskms.mdx
+++ b/website/content/docs/configuration/seal/awskms.mdx
@@ -115,7 +115,7 @@ or set to current under a key alias.
 
 @include 'aws-imds-timeout.mdx'
 
-## Learn
+## Tutorial
 
 Refer to the [Auto-unseal using AWS KMS](https://learn.hashicorp.com/vault/operations/ops-autounseal-aws-kms)
-guide for a step-by-step tutorial.
+tutorial to learn how to auto-unseal Vault using AWK KMS.
