--- a/website/content/docs/enterprise/sentinel/index.mdx
+++ b/website/content/docs/enterprise/sentinel/index.mdx
@@ -110,7 +110,7 @@ of Sentinel in action, and the
 [Properties](/docs/enterprise/sentinel/properties) page for detailed
 property documentation.
 
-## Learn
+## Tutorial
 
 Refer to the [Sentinel Policies](https://learn.hashicorp.com/vault/identity-access-management/iam-sentinel)
-guide for a step-by-step tutorial.
+tutorial to learn how to author Sentinel policies in Vault.
