--- a/website/content/docs/secrets/key-management/index.mdx
+++ b/website/content/docs/secrets/key-management/index.mdx
@@ -166,10 +166,9 @@ The following table defines which key types are compatible with each KMS provide
 | `ecdsa-p384`   | No              | No      | **Yes**       |
 | `ecdsa-p521`   | No              | No      | No            |
 
-## Learn
+## Tutorial
 
-Refer to the [Key Management Secrets Engine](https://learn.hashicorp.com/collections/vault/key-management) guide for
-a step-by-step tutorial.
+Refer to the [Key Management Secrets Engine](https://learn.hashicorp.com/collections/vault/key-management) tutorial series to learn how to use the key management secrets engine for Azure and GCP.
 
 ## API
 
