--- a/website/content/docs/secrets/ssh/one-time-ssh-passwords.mdx
+++ b/website/content/docs/secrets/ssh/one-time-ssh-passwords.mdx
@@ -107,11 +107,11 @@ username@<IP of remote host>:~$
 Note: `sshpass` cannot handle host key checking. Host key checking can be
 disabled by setting `-strict-host-key-checking=no`.
 
-## Learn
+## Tutorial
 
 Refer to the [SSH Secrets Engine: One-Time SSH
-Password](https://learn.hashicorp.com/vault/secrets-management/sm-ssh-otp) guide
-for a step-by-step tutorial.
+Password](https://learn.hashicorp.com/vault/secrets-management/sm-ssh-otp) tutorial
+to learn how to use the Vault SSH secrets engine to secure authentication and authorization for access to machines.
 
 ## API
 
