--- a/website/content/docs/agent/autoauth/methods/aws.mdx
+++ b/website/content/docs/agent/autoauth/methods/aws.mdx
@@ -56,12 +56,11 @@ parameters unset in your configuration.
 - `header_value` `(string: optional)` - If configured in Vault, the value to use for
   [`iam_server_id_header_value`](/api-docs/auth/aws#iam_server_id_header_value).
 
-- `nonce` `(string: optional)` - If not provided, Vault will generate a new UUID every time `vault agent` runs. 
-  If set, make sure you understand the importance of generating a good, unique `nonce` and protecting it. 
+- `nonce` `(string: optional)` - If not provided, Vault will generate a new UUID every time `vault agent` runs.
+  If set, make sure you understand the importance of generating a good, unique `nonce` and protecting it.
   See [Client Nonce](/docs/auth/aws#client-nonce) for more information.
 
-## Learn
+## Tutorial
 
 Refer to the [Vault Agent with
-AWS](https://learn.hashicorp.com/vault/identity-access-management/vault-agent-aws)
-guide for a step-by-step tutorial.
+AWS](https://learn.hashicorp.com/vault/identity-access-management/vault-agent-aws) tutorial to learn how to integrate Vault with IAM AWS' native authentication.
