--- a/website/content/docs/enterprise/control-groups.mdx
+++ b/website/content/docs/enterprise/control-groups.mdx
@@ -25,6 +25,7 @@ Control Groups can verify the following factors:
   groups.
 
 ### Controlled capabilities
+
 Control group factors can be configured to trigger the control group workflow
 on specific capabilities. This is done with the `controlled_capabilities` field.
 Not specifying the `controlled_capabilities` field will necessitate the factor to be
@@ -203,10 +204,10 @@ The above policy will reject the request unless two members of the `managers`
 group have authorized the request. Additionally it verifies the authorizations
 happened in the last hour.
 
-## Learn
+## Tutorial
 
 Refer to the [Control Groups](https://learn.hashicorp.com/vault/identity-access-management/iam-control-groups)
-guide for a step-by-step tutorial.
+tutorial to learn how to implement dual controller authorization within your policies.
 
 ## API
 
