--- a/website/content/docs/secrets/kv/kv-v1.mdx
+++ b/website/content/docs/secrets/kv/kv-v1.mdx
@@ -98,11 +98,11 @@ my-value            s3cr3t
 ttl                 30m
 ```
 
-## Learn
+## Tutorial
 
 Refer to the [Static Secrets: Key/Value Secrets
 Engine](https://learn.hashicorp.com/vault/secrets-management/sm-static-secrets)
-guide for a step-by-step tutorial.
+tutorial to learn how to set up a uniform workflow to securely store sensitive information.
 
 ## API
 
