--- a/website/content/docs/secrets/transit.mdx
+++ b/website/content/docs/secrets/transit.mdx
@@ -232,11 +232,11 @@ the proper permission, it can use this secrets engine.
     data, since the process would not be able to get access to the plaintext
     data.
 
-## Learn
+## Tutorial
 
 Refer to the [Encryption as a Service: Transit Secrets
 Engine](https://learn.hashicorp.com/vault/encryption-as-a-service/eaas-transit)
-guide for a step-by-step tutorial.
+tutorial to learn how to use the transit secrets engine to handle cryptographic functions on data in-transit.
 
 ## API
 
