backport of commit d0c60b795e210cfeec6f697024375c6ab6c68419

--- a/website/content/docs/configuration/storage/index.mdx
+++ b/website/content/docs/configuration/storage/index.mdx
@@ -92,5 +92,5 @@ migrate to Integrated Storage, read the following tutorials:
 ## Learn
 
 Refer to the [Integrated
-Storage](https://learn.hashicorp.com/collections/vault/raft) tutorial collection
+Storage](https://learn.hashicorp.com/collections/vault/raft) tutorials
 to learn more about Integrated Storage.
