--- a/website/content/docs/configuration/storage/raft.mdx
+++ b/website/content/docs/configuration/storage/raft.mdx
@@ -197,10 +197,9 @@ storage "raft" {
 }
 ```
 
-## Learn
+## Tutorial
 
 Refer to [Integrated
-Storage](https://learn.hashicorp.com/collections/vault/raft) for a collection of
-tutorials on Integrated Storage.
+Storage](https://learn.hashicorp.com/collections/vault/raft) for a tutorials on Integrated Storage.
 
 [raft]: https://raft.github.io/ 'The Raft Consensus Algorithm'
