--- a/website/content/docs/secrets/ad.mdx
+++ b/website/content/docs/secrets/ad.mdx
@@ -347,10 +347,9 @@ handle this is to simply wait and retry using the new password.
 
 Active Directory will only support password changes over a secure connection. Ensure that your configuration block is not using an unsecured LDAP connection.
 
-## Learn
+## Tutorial
 
-Refer to the [Active Directory Service Account Check-out](https://learn.hashicorp.com/vault/secrets-management/ad-secrets) guide
-for a step-by-step tutorial.
+Refer to the [Active Directory Service Account Check-out](https://learn.hashicorp.com/vault/secrets-management/ad-secrets) tutorial to learn how to enable a team to share a select set of service accounts.
 
 ## API
 
