backport of commit 952c9baca9fb383c390687d31b80eb99ad47b4f6

--- a/website/content/docs/enterprise/managed-keys.mdx
+++ b/website/content/docs/enterprise/managed-keys.mdx
@@ -16,7 +16,7 @@ To satisfy these requirements, Vault has a centralized abstraction called
 *Managed Keys* that different secrets engines can plug into, allowing them to 
 delegate these operations to a trusted external KMS.
 
-Minimally, a manged key consists of a named managed key entry managed by the
+Minimally, a managed key consists of a named managed key entry managed by the
 [`sys/managed-key`](../../api-docs/system/managed-keys) API.  Besides a name,
 there are backend specific configurations to access the key in question.
 
