--- a/website/content/docs/secrets/pki.mdx
+++ b/website/content/docs/secrets/pki.mdx
@@ -149,7 +149,7 @@ root CA (which may be a second mount of the `pki` secrets engine).
 Since 1.10, Vault Enterprise can access private key material in a 
 [_managed key_](../enterprise/managed-keys).  In this case Vault never sees the 
 private key, and the external KMS or HSM performs certificate signing operations.
-Managed keys are configured by selection the `kms` type when generating a root
+Managed keys are configured by selecting the `kms` type when generating a root
 or intermediate.
 
 ### One CA Certificate, One Secrets Engine
