Agent parameters - typo in template_config description / text.

--- a/website/content/docs/agent/template-config.mdx
+++ b/website/content/docs/agent/template-config.mdx
@@ -62,7 +62,7 @@ failures.
 
 Below is an example setting of `template_config` where the additional 
 [`error_on_missing_key` parameter in the template stanza](/docs/agent/template#error_on_missing_key) in conjunction with 
-`exit_on_retry_failure` result in the agent existing in case of no key / value 
+`exit_on_retry_failure` result in the agent exiting in case of no key / value 
 instead of the default retry behaviour when no configuration is set.
 
 ```hcl
