--- a/website/content/docs/configuration/index.mdx
+++ b/website/content/docs/configuration/index.mdx
@@ -9,7 +9,9 @@ description: Vault server configuration reference.
 Outside of development mode, Vault servers are configured using a file.
 The format of this file is [HCL](https://github.com/hashicorp/hcl) or JSON.
 By default, Vault expects the config directory and files to be owned by the
-user running Vault. It also expects no write or execute permissions for group or others. 
+user running Vault. It also expects no write or execute permissions for group or others.
+Vault allows operators to specify the user and permissions of the plugin directory and binaries 
+using parameters `plugin_file_uid` and `plugin_file_permissions` if an operator needs those to be different.  
 This check can be disabled via the environment variable `VAULT_DISABLE_FILE_PERMISSIONS_CHECK`. 
 An example configuration is shown below:
 
@@ -120,10 +122,10 @@ to specify where the configuration is.
   allowed to be loaded. Vault must have permission to read files in this
   directory to successfully load plugins, and the value cannot be a symbolic link.
   Vault expects the plugin directory and plugin binaries to be owned by the user 
-  running Vault. It allows operators to specify the user and permissions of the
-  plugin directory and binaries using parameters `plugin_file_uid` and `plugin_file_permissions`
-  if an operator needs those to be different. This check can be disabled via the 
-  environment variable `VAULT_DISABLE_FILE_PERMISSIONS_CHECK`.
+  running Vault. It also expects no write or execute permissions for group or others.
+  Vault allows operators to specify the user and permissions of the plugin directory and binaries 
+  using parameters `plugin_file_uid` and `plugin_file_permissions` if an operator needs those to be different. 
+  This check can be disabled via the environment variable `VAULT_DISABLE_FILE_PERMISSIONS_CHECK`.
 
 - `plugin_file_uid` `(integer: 0)` – Uid of the plugin directories and plugin binaries.
    By default, Vault expects the plugin directory and plugin binaries to be owned by
