--- a/website/content/docs/enterprise/namespaces.mdx
+++ b/website/content/docs/enterprise/namespaces.mdx
@@ -59,7 +59,7 @@ For example, these three requests are equivalent:
 2. Path: `secret/foo`, Header: `X-Vault-Namespace: ns1/ns2/`
 3. Path: `ns2/secret/foo`, Header: `X-Vault-Namespace: ns1/`
 
-## Root only API Paths
+## Root-only API Paths
 
 There are certain API paths that can only be called from the root namespace:
 
