--- a/website/content/docs/configuration/index.mdx
+++ b/website/content/docs/configuration/index.mdx
@@ -8,11 +8,9 @@ description: Vault server configuration reference.
 
 Outside of development mode, Vault servers are configured using a file.
 The format of this file is [HCL](https://github.com/hashicorp/hcl) or JSON.
-By default, Vault expects the config directory and files to be owned by the
-user running Vault. It also expects no write or execute permissions for group or others.
-Vault allows operators to specify the user and permissions of the plugin directory and binaries 
-using parameters `plugin_file_uid` and `plugin_file_permissions` if an operator needs those to be different.  
-This check can be disabled via the environment variable `VAULT_DISABLE_FILE_PERMISSIONS_CHECK`. 
+
+@include 'file-permissions-check.mdx'
+
 An example configuration is shown below:
 
 ```javascript
