making doc changes

--- a/website/content/docs/plugins/plugin-architecture.mdx
+++ b/website/content/docs/plugins/plugin-architecture.mdx
@@ -92,7 +92,7 @@ cannot be added to Vault unless it exists in the plugin directory. There is no
 default for this configuration option, and if it is not set, plugins cannot be
 added to Vault.
 
-~> Warning: By default, Vault expects the config directory and files to be owned by the
+~> Warning: By default, Vault expects the plugin directory and files to be owned by the
 user running Vault. It also expects no write or execute permissions for group or others.
 Vault allows operators to specify the user and permissions of the plugin directory and binaries 
 using parameters `plugin_file_uid` and `plugin_file_permissions` in config if an operator needs those to be different.  
