--- a/website/content/docs/plugins/index.mdx
+++ b/website/content/docs/plugins/index.mdx
@@ -12,7 +12,7 @@ allows both built-in and external plugins to be treated like Legos. Any plugin
 can exist at multiple different locations. Different versions of a plugin may
 be at each location, with each version differing from Vault's version.
 
-@include 'file-permissions-check.mdx'
+@include 'plugin-file-permissions-check.mdx'
 
 ## Built-In Plugins
 
