--- a/website/content/partials/plugin-file-permissions-check.mdx
+++ b/website/content/partials/plugin-file-permissions-check.mdx
@@ -1,4 +1,4 @@
-By default, Vault expects the config directory and files to be owned by the
+By default, Vault expects the plugin directory and files to be owned by the
 user running Vault. It also expects no write or execute permissions for group or others.
 Vault allows operators to specify the user and permissions of the plugin directory and binaries 
 using parameters `plugin_file_uid` and `plugin_file_permissions` if an operator needs those to be different.  
