--- a/website/content/docs/secrets/kv/kv-v2.mdx
+++ b/website/content/docs/secrets/kv/kv-v2.mdx
@@ -165,9 +165,9 @@ After the secrets engine is configured and a user/machine has a Vault token with
 the proper permission, it can generate credentials. The `kv` secrets engine
 allows for writing keys with arbitrary values.
 
-The path-like KV-v1 syntax for referencing a secret (`secret/foo`) can still 
-be used in KV-v2, but we recommend using the `-mount=secret` flag syntax to 
-avoid mistaking it for the actual path to the secret (`secret/data/foo` is the 
+The path-like KV-v1 syntax for referencing a secret (`secret/foo`) can still
+be used in KV-v2, but we recommend using the `-mount=secret` flag syntax to
+avoid mistaking it for the actual path to the secret (`secret/data/foo` is the
 real path).
 
 ### Writing/Reading arbitrary data
@@ -185,7 +185,7 @@ real path).
    version          1
    ```
 
-1. Read arbitrary data:
+2. Read arbitrary data:
 
    ```shell-session
    $ vault kv get -mount=secret my-secret
@@ -205,7 +205,7 @@ real path).
    bar         b
    ```
 
-1. Write another version, the previous version will still be accessible. The
+3. Write another version, the previous version will still be accessible. The
    `-cas` flag can optionally be passed to perform a check-and-set operation. If
    not set the write will be allowed. If set to `-cas=0` a write will only be allowed
    if the key doesn't exist. If the index is non-zero the write will only be
@@ -223,7 +223,7 @@ real path).
    version          2
    ```
 
-1. Reading now will return the newest version of the data:
+4. Reading now will return the newest version of the data:
 
    ```shell-session
    $ vault kv get -mount=secret my-secret
@@ -243,9 +243,9 @@ real path).
    bar         bb
    ```
 
-1. Partial updates can be accomplished using the `vault kv patch` command. An
+5. Partial updates can be accomplished using the `vault kv patch` command. A
    command will initially attempt an HTTP `PATCH` request which requires the
-   `patch` ACL capability. The `PATCH` request will fail if the the token used
+   `patch` ACL capability. The `PATCH` request will fail if the token used
    is associated with a policy that does not contain the `patch` capability. In
    this case the command will perform a read, local update, and subsequent write
    which require both the `read` and `update` ACL capabilities.
@@ -266,7 +266,7 @@ real path).
    version          3
    ```
 
-1. The `vault kv patch` command also supports a `-method` flag which can be
+6. The `vault kv patch` command also supports a `-method` flag which can be
    used to specify HTTP `PATCH` or read-then-write. The supported values are
    `patch` and `rw` for HTTP `PATCH` and read-then-write, respectively.
 
@@ -296,7 +296,7 @@ real path).
    version          3
    ```
 
-2. Reading after a patch will return the newest version of the data in which
+7. Reading after a patch will return the newest version of the data in which
    only the specified fields were updated:
 
    ```shell-session
@@ -317,7 +317,7 @@ real path).
    bar         bbb
    ```
 
-3. Previous versions can be accessed with the `-version` flag:
+8. Previous versions can be accessed with the `-version` flag:
 
    ```shell-session
    $ vault kv get -mount=secret -version=1 my-secret
@@ -361,7 +361,7 @@ See the commands below for more information:
    Success! Data deleted (if it existed) at: secret/data/my-secret
    ```
 
-1. Versions can be undeleted:
+2. Versions can be undeleted:
 
    ```shell-session
    $ vault kv undelete -mount=secret -versions=2 my-secret
@@ -383,7 +383,7 @@ See the commands below for more information:
    my-value    short-lived-s3cr3t
    ```
 
-1. Destroying a version permanently deletes the underlying data:
+3. Destroying a version permanently deletes the underlying data:
 
    ```shell-session
    $ vault kv destroy -mount=secret -versions=2 my-secret
@@ -429,7 +429,7 @@ See the commands below for more information:
    destroyed        true
    ```
 
-1. The metadata settings for a key can be configured:
+2. The metadata settings for a key can be configured:
 
    ```shell-session
    $ vault kv metadata put -mount=secret -max-versions 2 -delete-version-after="3h25m19s" my-secret
@@ -509,7 +509,7 @@ See the commands below for more information:
    bar         bb
    ```
 
-   The `vault kv metadata patch` command can be used to partially overwrite the valueof `custom_metadata`.
+   The `vault kv metadata patch` command can be used to partially overwrite the value of `custom_metadata`.
    The following invocation will update `custom_metadata` sub-field `foo` but leave `bar` untouched:
 
    ```shell-session
@@ -533,7 +533,7 @@ See the commands below for more information:
    bar         bb
    ```
 
-1. Permanently delete all metadata and versions for a key:
+3. Permanently delete all metadata and versions for a key:
 
    ```shell-session
    $ vault kv metadata delete -mount=secret my-secret
