--- a/website/content/docs/auth/login-mfa/index.mdx
+++ b/website/content/docs/auth/login-mfa/index.mdx
@@ -196,14 +196,6 @@ To get started with Login MFA, refer to the [Login MFA](https://learn.hashicorp.
 
 Rate limiting of Login MFA paths are enforced by default in Vault 1.10.1 and above.
 By default, Vault allows for 5 consecutive failed TOTP passcode validation.
-This value can also be configured by adding `max_totp_validation_attempts` to the server configuration file as shown below.
+This value can also be configured by adding `max_validation_attempts` to the TOTP configuration.
 If the number of consecutive failed TOTP passcode validation exceeds the configured value, the user
 needs to wait until a fresh TOTP passcode is available.
-
-```hcl
-max_totp_validation_attempts = 10
-
-listener "tcp" {
-  # ...
-}
-```
