--- a/website/content/docs/commands/index.mdx
+++ b/website/content/docs/commands/index.mdx
@@ -71,7 +71,7 @@ and the args always follow the path to set API parameter values.
 The four most common operations in Vault are [read](/docs/commands/read),
 [write](/docs/commands/write), [delete](/docs/commands/delete), and
 [list](/docs/commands/list). These operations work on most paths in Vault. Some
-paths will contain secrets, other paths might contain configuration. Whatever it
+paths will contain secrets while other paths may contain configuration. Whatever it
 is, the primary interface for reading and writing data to Vault is similar.
 
 ### Print cURL Command
