backport of commit 65ec6a8a6aa5225144fe4e11c2cd6c3747d24c1e

--- a/website/content/docs/commands/index.mdx
+++ b/website/content/docs/commands/index.mdx
@@ -167,7 +167,7 @@ format.
 $ vault kv put secret/password value=itsasecret
 ```
 
-However, some Vault API requires more advanced structures such as maps. You can
+However, some Vault API require more advanced structures such as maps. You can
 use stdin or file input instead.
 
 ### stdin
