--- a/website/content/docs/commands/index.mdx
+++ b/website/content/docs/commands/index.mdx
@@ -25,7 +25,7 @@ CLI command maps directly to the HTTP API internally.
 
 Each command is represented as a command or subcommand, and there are a number
 of command and subcommand options available: HTTP options, output options, and
-command specific options.
+command-specific options.
 
 Construct your Vault CLI command such that the command options precede its path
 and arguments if any:
